fix z-index

--- a/app/assets/stylesheets/layouts/l-top_menu-v2.sass
+++ b/app/assets/stylesheets/layouts/l-top_menu-v2.sass
@@ -22,6 +22,7 @@ $top_menu_background_active: lighten($gray-4, 4%)
   border-bottom: 1px solid #444
   color: #fff
   height: $top_menu-height
+  position: relative // w/o it z-index wont work
   z-index: 10
 
   +gte_ipad
